--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,78 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import "tailwindcss";
+#root{
+  height:100%;
+  width:100%;
+  font-family:Input;
+  color:white;
+  overflow-x:hidden;
+}
+@theme{
+  --color-irl-blue: #00aeef;
+  --color-irl-red: #da1c5c;
+  --color-irl-yellow: #fff200;
+  --color-irl-black: #231f20;
+  --font-input: "Input";
+  --font-input-bold: "InputBold";
+
+}
+@font-face {
+  font-family: Input;
+  font-style: normal;
+  font-weight: 200 700;
+  font-display: swap;
+  src: url("./assets/fonts/fonnts.com-InputSansCompressed_ExLight.otf") format("opentype");
+}
+@font-face {
+  font-family: InputBold;
+  font-style: bold;
+  font-weight: 200 700;
+  font-display: swap;
+  src: url("./assets/fonts/fonnts.com-InputSansCompressed_Medium.otf") format("opentype");
+}
+body{
+  color:white;
+  font-family:Input;
+}
+h1{
+  font-family:InputBold;
+}
+p{
+  font-size:2rem
+}
+b{
+  font-family: InputBold;
+}
+.b{
+  border:12px dashed white;
+  border-radius: 25px;
+}
+button{
+  font-size:2rem;
+  text-align: center;
+  color:black;
+  margin:1rem;
+  height:200px;
+  font-family:InputBold;
+  transition:0.1s ease;
+}
+button:hover{
+  border:12px dashed white;
+  color:white
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+.irlgrid{
+  background-size: var(--w) var(--w);
+  background-image:
+    linear-gradient(to right, var(--c) 3px, transparent 3px),
+    linear-gradient(to bottom, var(--c) 3px, transparent 3px);
 }
-a:hover {
-  color: #535bf2;
+.d{
+  background-color:blue;
+  border: 8px solid yellow;
 }
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.d2{
+  background-color: purple;
+  border: 8px solid red;
 }
